--- a/web/portal/assets/css/demo.css
+++ b/web/portal/assets/css/demo.css
@@ -1,11 +1,10 @@
-@media (min-width: 992px){
-    .typo-line{
+@media (min-width: 992px) {
+    .typo-line {
         padding-left: 140px;
         margin-bottom: 40px;
         position: relative;
     }
-
-    .typo-line .category{
+    .typo-line .category {
         transform: translateY(-50%);
         top: 50%;
         left: 0px;
@@ -13,20 +12,23 @@
     }
 }
 
-.all-icons [class*="pe-"]{
+.all-icons [class*="pe-"] {
     font-size: 40px;
 }
-.all-icons input{
+
+.all-icons input {
     border: 0;
 }
-.all-icons .font-icon-detail{
+
+.all-icons .font-icon-detail {
     text-align: center;
     padding: 45px 0px 30px;
     border: 1px solid #e5e5e5;
     border-radius: 6px;
     margin: 15px 0;
 }
-.all-icons .font-icon-detail input{
+
+.all-icons .font-icon-detail input {
     margin: 25px auto 0;
     width: 100%;
     text-align: center;
@@ -35,33 +37,51 @@
     font-size: 13px;
 }
 
-#map{
-    position:relative;
-    width:100%;
+#map {
+    position: relative;
+    width: 100%;
     height: calc(100% - 60px);
 }
 
-.places-buttons .btn{
+.places-buttons .btn {
     margin-bottom: 30px
 }
-.sidebar .nav > li.active-pro{
+
+.sidebar .nav>li.active-pro {
     position: absolute;
     width: 100%;
     bottom: 10px;
 }
-.sidebar .nav > li.active-pro a{
+
+.sidebar .nav>li.active-pro a {
     background: rgba(255, 255, 255, 0.14);
     opacity: 1;
     color: #FFFFFF;
 }
 
 .table-upgrade td:nth-child(2),
-.table-upgrade td:nth-child(3){
+.table-upgrade td:nth-child(3) {
     text-align: center;
 }
 
-@media all and (max-width: 991px)  {
-    .sidebar .nav > li.active-pro{
+@media all and (max-width: 991px) {
+    .sidebar .nav>li.active-pro {
         position: initial;
     }
+}
+
+.avatar-profile {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    overflow: hidden;
+    opacity: 0.9;
+    object-fit: cover;
+    -o-object-fit: cover;
+}
+
+.borders {
+    position: relative;
+    border: 5px solid #fff;
+    border-radius: 100%;
 }
